--- a/views/index1.html
+++ b/views/index1.html
@@ -18,24 +18,11 @@
   </head>
   <body>
     <p>THIS IS PAGE ONE! SUCH WOW</p>
-	<img src="images/1.jpg"></img>
+	<img src="img/1.jpg"></img>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
-  </body>
-</html>
-
-
-<!doctype html>
-<html>
-  <head>
-    <title>This is the title of the webpage!</title>
-	<link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
-	<p>THIS IS PAGE ONE! SUCH WOW</p>
-	<img src="images/1.jpg"></img>
   </body>
 </html>
