--- a/views/index2.html
+++ b/views/index2.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <p>THIS IS PAGE TWO! SUCH WOW</p>
-	<img src="images/2.jpg"></img>
+	<img src="img/2.jpg"></img>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
