--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,4 +1,7 @@
-<meta charset="utf-8">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap 101 Template</title>
@@ -8,3 +11,10 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+  </head>
+  <body class="container">
+  
+		<%= yield %>
+  
+  </body>
+</html>
