--- a/views/index.erb
+++ b/views/index.erb
@@ -1,10 +1,24 @@
-<p>Holidays this month</p>
-<ul>
-<%
-  time = Time.new
-  holidays = HolidApi.get(country: 'us', year: time.year, month: time.month) 
-%>
-<% holidays.each do |hol| %>
-    <li><%= hol[0]['name'] %></li>
-<% end %>
-</ul>
+<div class="col-xs-12 col-md-6">
+  <p>Holidays this month</p>
+  <ul>
+  <%
+    time = Time.new
+    holidays = HolidApi.get(country: 'us', year: time.year, month: time.month) 
+  %>
+  <% holidays.each do |hol| %>
+      <li><%= hol[0]['name'] %></li>
+  <% end %>
+  </ul>
+</div>
+
+<div class="col-xs-12 col-md-6">
+  <p>Holidays in the United states, November 1993</p>
+  <ul>
+  <%
+    holidays = HolidApi.get(country: 'us', year: "1993", month: "11") 
+  %>
+  <% holidays.each do |hol| %>
+      <li><%= hol[0]['name'] %></li>
+  <% end %>
+  </ul>
+</div>
