--- a/views/index.erb
+++ b/views/index.erb
@@ -1,24 +1,44 @@
 <div class="col-xs-12 col-md-6">
-  <p>Holidays this month</p>
-  <ul>
-  <%
-    time = Time.new
-    holidays = HolidApi.get(country: 'us', year: time.year, month: time.month) 
-  %>
-  <% holidays.each do |hol| %>
-      <li><%= hol[0]['name'] %></li>
-  <% end %>
-  </ul>
+  <form id="api">
+    <input name="country" type="text" id="country" placeholder="country">
+    <select name="month" id="month" form="api">
+      <option value="1">January</option>
+      <option value="2">February</option>
+      <option value="3">March</option>
+      <option value="4">April</option>
+      <option value="5">May</option>
+      <option value="6">June</option>
+      <option value="7">July</option>
+      <option value="8">August</option>
+      <option value="9">September</option>
+      <option value="10">October</option>
+      <option value="11">November</option>
+      <option value="12">December</option>
+    </select>
+    <input name="year" id="year" type="number">
+    <button type="submit">Submit</button>
+  </form>
 </div>
 
 <div class="col-xs-12 col-md-6">
-  <p>Holidays in the United states, November 1993</p>
-  <ul>
-  <%
-    holidays = HolidApi.get(country: 'us', year: "1993", month: "11") 
-  %>
-  <% holidays.each do |hol| %>
-      <li><%= hol[0]['name'] %></li>
+  <% if params.any? %>
+    <% @holidays = Array.new %>
+    <p> Results </p>
+    <ul>
+    <%
+      begin
+        @holidays = HolidApi.get(country: params['country'], year: params['year'], month: params['month']) 
+      rescue
+    %>
+      <li>Form error, please redo and try again</li>
+    <% end %>
+    
+    <% if @holidays.any? %>
+      <% @holidays.each do |hol| %>
+          <li><%= hol[0]['name'] %></li>
+      <% end %>
+      </ul>
+    <% end %>
+    
   <% end %>
-  </ul>
 </div>
