--- a/views/index.erb
+++ b/views/index.erb
@@ -1,21 +1,8 @@
 <div class="col-xs-12 col-md-6">
   <form id="api">
-    <input name="country" type="text" id="country" placeholder="country">
-    <select name="month" id="month" form="api">
-      <option value="1">January</option>
-      <option value="2">February</option>
-      <option value="3">March</option>
-      <option value="4">April</option>
-      <option value="5">May</option>
-      <option value="6">June</option>
-      <option value="7">July</option>
-      <option value="8">August</option>
-      <option value="9">September</option>
-      <option value="10">October</option>
-      <option value="11">November</option>
-      <option value="12">December</option>
-    </select>
-    <input name="year" id="year" type="number">
+    <input name="country" type="text" id="country" value="<%= params['country'] %>"placeholder="country">
+    <input name="month" type="number" id="month" value="<%= params['month'] %>"placeholder="month">
+    <input name="year" id="year" value="<%= params['year'] %>" type="number" placeholder="year">
     <button type="submit">Submit</button>
   </form>
 </div>
